tests/macros/plugin/mask.rs
fn main() {
    let q = discourse::questions![Plugin { mask: todo!() }];
}
